--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+
+    <!--================ Hero sm Banner start =================-->
     <section class="mb-30px">
       <div class="container">
         <div class="hero-banner hero-banner--sm">
