--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -33,9 +33,9 @@
           <div class="col-lg-8">
             <div class="main_blog_details">
               {% if post.image_url %}
-                <img class="img-fluid" src="{{post.image_url}}" alt="">
+                <img class="img-fluid" src="{{post.image_url}}" alt="Картинка поста">
               {% else %}
-                <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="Картинка блога">
               {% endif %}
               <h4>{{post.title}}</h4>
               <div class="user_details">
